--- a/stable-coin-paper/main.tex
+++ b/stable-coin-paper/main.tex
@@ -1,6 +1,6 @@
 % !TEX encoding = UTF-8 Unicode
 
-\documentclass[letterpaper,10pt]{article}
+\documentclass[letterpaper]{article}
 \bibliographystyle{abbrv}
 
 % = = = = = Packages = = = = = %
