Gold vs ETF Gold in bullet points

--- a/stable-coin-paper/sections/stablecoin.tex
+++ b/stable-coin-paper/sections/stablecoin.tex
@@ -66,6 +66,27 @@ Other blog posts, whitepapers, etc on systemizing stablecoins.
 %year = {2014},
 %note = {(Accessed on 02/11/2019)}
 %}
+%=====================Gold vs ETFGold  ===================%
+%Gold ETF: Investors want  exposure to the asset that’s electronically traded without taking possession of the commodity.
+%advs
+% Easy to trade
+% No storage and insurance cost
+% Hard to steal
+% Gold ETF is the most convenient way to store money in gold.
+% It is both convenient and low cost. If you’re looking for an inexpensive way to invest in the direction of the gold price, GLD is ideal.
+% disadv:
+% Ownership of Gold ETFs does not entitle investors to any physical gold. 
+%  in special occasions when the  market or the bank is not available, the user does not have access to to trade his shares. In this case, ownership of ETF is not any useful for the user.
+%  Gold EtTF has counter-party risk and exposed to bad management as the investors have to trust a bank or other trustee to hold and manage their shares
+% Physical Gold: Investors want to own the tangible asset
+%advs:
+% It’s a solid investment and serves as a great hedge against inflation. With strong appreciation through the years, it has proven reliably positive returns even during economic downtimes. Gold prices fluctuate but won’t go away, it won’t be devalued, and it will always be valuable anywhere in the world.
+% When you invest in physical gold, you’re entirely in charge of your investment, meaning you’re not trusting it to someone else like an ETF. You decide how to store and secure it.
+% When you sell a gold ETF, that data is required by law to be immediately transmitted to the government by the brokerage. Sell gold bullion or bars, and you must report capital gains on your income tax return.
+%disadv:
+% When you decide to sell your gold, you will have to pay a dealer’s fee as a percentage of your purchase. Hard to buy and sell (trade)
+% easy to be stolen
+% hard to store
 
 
 %==========================================%
